1.err
   Compiling coinbase-pro-rs v0.1.0 (file:///home/ae/coinbase-pro-rs)
error[E0425]: cannot find function `f64_opt_from_string` in this scope
   --> src/structs/private.rs:136:21
    |
136 | #[derive(Serialize, Deserialize, Debug)]
    |                     ^^^^^^^^^^^ did you mean `f64_from_string`?
help: possible candidate is found in another module, you can import it into scope
    |
1   | use utils::f64_opt_from_string;
    |

warning: unused `#[macro_use]` import
 --> src/lib.rs:2:1
  |
2 | #[macro_use] extern crate serde_json;
  | ^^^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused import: `std::fmt`
 --> src/structs/public.rs:1:5
  |
1 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `serde_json::Value`
 --> src/structs/public.rs:2:5
  |
2 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `uuid::Uuid`
 --> src/structs/public.rs:3:5
  |
3 | use uuid::Uuid;
  |     ^^^^^^^^^^

warning: unused import: `utils::usize_from_string`
 --> src/structs/public.rs:5:5
  |
5 | use utils::usize_from_string;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::DateTime`
 --> src/structs/public.rs:6:5
  |
6 | use super::DateTime;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
 --> src/structs/private.rs:1:5
  |
1 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `serde_json::Value`
 --> src/structs/private.rs:2:5
  |
2 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `HeaderMap`
 --> src/private.rs:8:13
  |
8 | use hyper::{HeaderMap, Request, Body, Uri, Method};
  |             ^^^^^^^^^

warning: unused import: `Value`
  --> src/private.rs:13:24
   |
13 | use serde_json::{self, Value};
   |                        ^^^^^

warning: unused import: `HeaderMap`
 --> src/public.rs:6:41
  |
6 | use hyper::{Client, Request, Body, Uri, HeaderMap};
  |                                         ^^^^^^^^^

error[E0425]: cannot find function `f64_opt_from_string` in this scope
   --> src/structs/private.rs:136:21
    |
136 | #[derive(Serialize, Deserialize, Debug)]
    |                     ^^^^^^^^^^^ did you mean `f64_from_string`?
help: possible candidate is found in another module, you can import it into scope
    |
1   | use utils::f64_opt_from_string;
    |

warning: unused `#[macro_use]` import
 --> src/lib.rs:2:1
  |
2 | #[macro_use] extern crate serde_json;
  | ^^^^^^^^^^^^
  |
  = note: #[warn(unused_imports)] on by default

warning: unused import: `std::fmt`
 --> src/structs/public.rs:1:5
  |
1 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `serde_json::Value`
 --> src/structs/public.rs:2:5
  |
2 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `uuid::Uuid`
 --> src/structs/public.rs:3:5
  |
3 | use uuid::Uuid;
  |     ^^^^^^^^^^

warning: unused import: `utils::usize_from_string`
 --> src/structs/public.rs:5:5
  |
5 | use utils::usize_from_string;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `super::DateTime`
 --> src/structs/public.rs:6:5
  |
6 | use super::DateTime;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `std::fmt`
 --> src/structs/private.rs:1:5
  |
1 | use std::fmt;
  |     ^^^^^^^^

warning: unused import: `serde_json::Value`
 --> src/structs/private.rs:2:5
  |
2 | use serde_json::Value;
  |     ^^^^^^^^^^^^^^^^^

warning: unused import: `HeaderMap`
 --> src/private.rs:8:13
  |
8 | use hyper::{HeaderMap, Request, Body, Uri, Method};
  |             ^^^^^^^^^

warning: unused import: `Value`
  --> src/private.rs:13:24
   |
13 | use serde_json::{self, Value};
   |                        ^^^^^

warning: unused import: `HeaderMap`
 --> src/public.rs:6:41
  |
6 | use hyper::{Client, Request, Body, Uri, HeaderMap};
  |                                         ^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `coinbase-pro-rs`.
warning: build failed, waiting for other jobs to finish...
error: aborting due to previous error

For more information about this error, try `rustc --explain E0425`.
error: Could not compile `coinbase-pro-rs`.

To learn more, run the command again with --verbose.
